<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X10 My Home</string>
    <string name="action_settings">Settings</string>
    <string name="send_button">Send</string>
    <string name="message_box_hint">Message</string>
    <string name="connect_button">Connect</string>
    <string name="status_disconnected">Status: not connected</string>
    <string name="device_connect">Select Device</string>
    <string name="current_unit">Current unit: </string>
    <string name="status_connected">Connected to: </string>
    <string name="dim">Dim</string>
    <string name="bright">Bright</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="house_code">Select House Code</string>

</resources>
