<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/status_disconnected"
            android:textSize="@dimen/font_size_status" />
        
        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="connectClicked"
            android:text="@string/connect_button" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/unit_codes"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/border_ui"
            android:paddingLeft="0dp">

        </ListView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="4dp">
            
            <TextView
                android:id="@+id/current_unit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/current_unit"
                android:textSize="@dimen/font_size_status" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- style="@android:style/ButtonBar" -->
                <Button
                    android:id="@+id/button_on"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/on" 
                    android:onClick="lightOn"/>

                <Button
                    android:id="@+id/button_off"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/off"
                    android:onClick="lightOff"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" >

                <Button
                    android:id="@+id/button_dim"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dim" 
                    android:onClick="lightDim"/>

                <Button
                    android:id="@+id/button_bright"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bright"
                    android:onClick="lightBright"/>

            </LinearLayout>
            
            <EditText
                android:id="@+id/message_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_box_hint"
                android:layout_marginTop="10dp"/>
            
            <Button
                android:id="@+id/send_button"
                android:text="@string/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
