<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/status_disconnected"
            android:textSize="@dimen/font_size_status" />
        
        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="connectClicked"
            android:text="@string/connect_button" />
        
    </LinearLayout>
    
    
    
    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:onClick="sendMessage" />
    
    <EditText
        android:id="@+id/message_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_box_hint">
    </EditText>
  
    <ListView
        android:id="@+id/devices_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
        

</LinearLayout>
